[gd_scene load_steps=13 format=3 uid="uid://eenw3pn06tb4"]

[ext_resource type="PackedScene" uid="uid://cxy2wkr77qtfl" path="res://enemy/enemy.tscn" id="1_67tjn"]
[ext_resource type="Script" path="res://enemy/wizard.gd" id="2_x6xxa"]
[ext_resource type="Texture2D" uid="uid://c25hpm7pr1as" path="res://assets/Pixel Crawler/Heroes/Wizzard/Idle/Idle-Sheet.png" id="3_33r6c"]
[ext_resource type="PackedScene" uid="uid://csbfy5b34ecv5" path="res://items/blood_vial/blood_vial.tscn" id="4_ikfn6"]
[ext_resource type="PackedScene" uid="uid://cvh0746b6mmuf" path="res://items/blood_vial/blood_jug.tscn" id="5_kdl6q"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_2j27i"]
load_path = "res://.godot/imported/Wood.png-290c1b2731778e0c6a16dd4841f9516d.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_vqx8u"]
load_path = "res://.godot/imported/Hands.png-38a2e27d92b3940414d8ddc17b5ed25f.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_p5c3h"]
atlas = ExtResource("3_33r6c")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mb3mb"]
atlas = ExtResource("3_33r6c")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnfhg"]
atlas = ExtResource("3_33r6c")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fa0y"]
atlas = ExtResource("3_33r6c")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fnc0y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5c3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mb3mb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnfhg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fa0y")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[node name="Wizard" instance=ExtResource("1_67tjn")]
script = ExtResource("2_x6xxa")

[node name="WeaponVisuals" type="Node2D" parent="Visuals" index="0"]
position = Vector2(10, 2)

[node name="Weapon" type="Sprite2D" parent="Visuals/WeaponVisuals" index="0"]
rotation = -1.5708
texture = SubResource("CompressedTexture2D_2j27i")
region_enabled = true
region_rect = Rect2(80, 0, 32, 16)

[node name="Hand" type="Sprite2D" parent="Visuals/WeaponVisuals" index="1"]
rotation = -1.5708
texture = SubResource("CompressedTexture2D_vqx8u")
region_enabled = true
region_rect = Rect2(0, 16, 16, 16)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Visuals" index="1"]
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_fnc0y")
autoplay = "default"
frame_progress = 0.70182

[node name="HealthComponent" parent="." index="3"]
max_health = 20.0

[node name="ItemDropComponent" parent="." index="4"]
drop_percent = 0.75
item_scenes = Array[PackedScene]([ExtResource("4_ikfn6"), ExtResource("4_ikfn6"), ExtResource("5_kdl6q")])

[node name="HitboxComponent" parent="." index="6"]
collision_layer = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="7"]

[node name="StateTimer" type="Timer" parent="." index="8"]
wait_time = 4.0
one_shot = true
autostart = true

[node name="FireRateTimer" type="Timer" parent="." index="9"]
wait_time = 0.4
one_shot = true
autostart = true

[node name="WeaponPivot" type="Marker2D" parent="." index="10"]

[node name="Muzzle" type="Marker2D" parent="WeaponPivot" index="0"]

[node name="HitFlashComponent" parent="." index="12" node_paths=PackedStringArray("sprite")]
sprite = NodePath("../Visuals/AnimatedSprite2D")
